--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "uuid": "^3.3.2"
     },
     "scripts": {
-        "prepare": "./node_modules/typescript/bin/tsc",
+        "prepare": "tsc",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx",
         "test": "nyc mocha",
         "test-integration": "nyc mocha --opts ./vagrant/mocha.opts",
