--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "uuid": "^3.3.2"
     },
     "scripts": {
+        "postinstall": "tsc",
         "prepare": "tsc",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx",
         "test": "nyc mocha",
